# flask_BLOG

./: .gitignore  pyproject.toml
flask_BLOG/: __init__.py  auth.py  blog.py  db.py
flask_BLOG/static/: style.css
flask_BLOG/templates/: base.j2
flask_BLOG/templates/auth/: login.j2  register.j2
flask_BLOG/templates/blog/: index.j2  update.j2
tests/: conftest.py  setup.cfg  test_auth.py  test_blog.py  test_db.py  test_factory.py
